// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CollapsePanel snapshot > CollapsePanel demo snapshot 0 1`] = `
<div>
  <div
    class="bui-collapse-panel"
  >
    <div
      class="bui-collapse-panel-list"
    >
      <div
        class="bui-collapse-panel-item bui-collapse-panel-item-active"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题1
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow bui-collapse-panel-item-header-icon-arrow-active"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: auto;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题2
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题3
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsePanel snapshot > CollapsePanel demo snapshot 0 2`] = `
<div>
  <div
    class="bui-collapse-panel"
  >
    <div
      class="bui-collapse-panel-list"
    >
      <div
        class="bui-collapse-panel-item bui-collapse-panel-item-active"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题1
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow bui-collapse-panel-item-header-icon-arrow-active"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: auto;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题2
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题3
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsePanel snapshot > CollapsePanel demo snapshot 0 3`] = `
<div>
  <div
    class="bui-collapse-panel"
  >
    <div
      class="bui-collapse-panel-list"
    >
      <div
        class="bui-collapse-panel-item bui-collapse-panel-item-active"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题1
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow bui-collapse-panel-item-header-icon-arrow-active"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: auto;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题2
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题3
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsePanel snapshot > CollapsePanel demo snapshot 0 4`] = `
<div>
  <div
    class="bui-collapse-panel"
  >
    <div
      class="bui-collapse-panel-list"
    >
      <div
        class="bui-collapse-panel-item bui-collapse-panel-item-active"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题1
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow bui-collapse-panel-item-header-icon-arrow-active"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: auto;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题2
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题3
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsePanel snapshot > CollapsePanel demo snapshot 0 5`] = `
<div>
  <div
    class="bui-collapse-panel"
  >
    <div
      class="bui-collapse-panel-list"
    >
      <div
        class="bui-collapse-panel-item bui-collapse-panel-item-active"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题1
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow bui-collapse-panel-item-header-icon-arrow-active"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: auto;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题2
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题3
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 61.6 78.8 28c1.1-1.2 3-1.3 4.2-.2 1.2 1.1 1.3 3 .2 4.2l-33 36a2.97 2.97 0 0 1-4.4 0l-33-36c-1.1-1.2-1-3.1.2-4.2s3.1-1 4.2.2L48 61.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsePanel snapshot > CollapsePanel demo snapshot 0 6`] = `
<div>
  <div
    class="bui-collapse-panel"
  >
    <div
      class="bui-collapse-panel-list"
    >
      <div
        class="bui-collapse-panel-item bui-collapse-panel-item-active"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题1
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow bui-collapse-panel-item-header-icon-arrow-active"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="m48 70.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2 1.6 1.5 1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7 1.6-1.5 4.2-1.4 5.7.2l21 22.8z"
              />
              <path
                d="m48 40.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2s1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7s4.2-1.4 5.7.2l21 22.8z"
                opacity=".6"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: auto;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题2
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="m48 70.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2 1.6 1.5 1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7 1.6-1.5 4.2-1.4 5.7.2l21 22.8z"
              />
              <path
                d="m48 40.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2s1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7s4.2-1.4 5.7.2l21 22.8z"
                opacity=".6"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题3
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="m48 70.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2 1.6 1.5 1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7 1.6-1.5 4.2-1.4 5.7.2l21 22.8z"
              />
              <path
                d="m48 40.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2s1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7s4.2-1.4 5.7.2l21 22.8z"
                opacity=".6"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsePanel snapshot > CollapsePanel demo snapshot 0 7`] = `
<div>
  <div
    class="bui-collapse-panel"
  >
    <div
      class="bui-collapse-panel-list"
    >
      <div
        class="bui-collapse-panel-item bui-collapse-panel-item-active"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题1
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48.1 26 27 48.8c-1.5 1.6-4 1.7-5.7.2-1.6-1.5-1.7-4-.2-5.7l24-26c1.6-1.7 4.3-1.7 5.9 0l24 26c1.5 1.6 1.4 4.2-.2 5.7s-4.2 1.4-5.7-.2L48.1 26z"
              />
              <path
                d="M48.1 56 27 78.8c-1.5 1.6-4 1.7-5.7.2s-1.7-4-.2-5.7l24-26c1.6-1.7 4.3-1.7 5.9 0l24 26c1.5 1.6 1.4 4.2-.2 5.7s-4.2 1.4-5.7-.2L48.1 56z"
                opacity=".6"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: auto;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题2
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="m48 70.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2 1.6 1.5 1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7 1.6-1.5 4.2-1.4 5.7.2l21 22.8z"
              />
              <path
                d="m48 40.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2s1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7s4.2-1.4 5.7.2l21 22.8z"
                opacity=".6"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
      <div
        class="bui-collapse-panel-item"
      >
        <div
          class="bui-collapse-panel-item-header"
        >
          <div
            class="bui-collapse-panel-item-header-label"
          >
            这是面板标题3
          </div>
          <div
            class="bui-collapse-panel-item-header-icon bui-collapse-panel-item-header-icon-arrow"
          >
            <svg
              class="bui-svg-icon"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="m48 70.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2 1.6 1.5 1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7 1.6-1.5 4.2-1.4 5.7.2l21 22.8z"
              />
              <path
                d="m48 40.1 21.1-22.8c1.5-1.6 4-1.7 5.7-.2s1.7 4 .2 5.7l-24 26a4.05 4.05 0 0 1-5.9 0l-24-26c-1.5-1.6-1.4-4.2.2-5.7s4.2-1.4 5.7.2l21 22.8z"
                opacity=".6"
              />
            </svg>
          </div>
        </div>
        <div
          class="bui-collapse"
          style="transition: none; height: 0px;"
        >
          <div
            class="bui-collapse-panel-item-content"
          >
            <p>
              
    狗是一种家养动物。
    它以忠诚和忠诚而闻名，
    在世界各地的许多家庭中，它都是受欢迎的客人。
  
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
